# de_challenge

./: .gitignore  README.md
flight-radar/: Dockerfile  pom.xml
flight-radar/src/main/avro/: AirportUpdateEvent.avsc  FlightUpdateEvent.avsc
flight-radar/src/main/java/flights/: Runner.java
flight-radar/src/main/java/flights/configuration/: Configuration.java
flight-radar/src/main/java/flights/generator/: FlightStatus.java  Generator.java
flight-radar/src/main/java/flights/parser/: AirportParser.java
flight-radar/src/main/java/flights/producer/: AirportProducer.java  (+2 more)
flight-radar/src/main/java/radar/: AirportUpdateEvent.java
flight-radar/src/main/resources/: airports.csv  application.properties
flight-server/: .gitignore  Dockerfile  README.md  pyproject.toml
flight-server/schemas/: flight.avsc
flight-server/server/: __init__.py  config.py  exception.py  main.py  settings.toml
flight-server/server/kafka/: configuration.py  consumer.py
flight-tracker/: Dockerfile  pom.xml
flight-tracker/src/main/avro/: AirportKpi.avsc  airportFlights.avsc  radar.AirportUpdateEvent.avsc  radar.FlightUpdateEvent.avsc
flight-tracker/src/main/java/flights/: Runner.java
flight-tracker/src/main/java/radar/: AirportKpi.java  AirportUpdateEvent.java  Flight.java  FlightUpdateEvent.java
flight-tracker/src/main/resources/: application.properties
flight-tracker/src/test/java/flights/: FlightKpiTopologyTest.java  TopologyTest.java
flight-tracker/src/test/resources/: application.properties
infrastructure/: docker-compose.yml  platform-config.yaml  update_run.sh
(+4 files in other folders)
