[tool.poetry]
authors = [
    "Predrag Njegovanovic <predrag.njegovanovic@smartcat.io>",
    "Milena Laketic <milena.laketic@smartcat.io>"
]

description = "Module representing server consuming updated radar events and passing them for visualization."
name = "flight-server"
packages = [
    { include = "server" }
]
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.9"
dynaconf = "^3.1.11"
confluent-kafka = "^2.0.2"
requests = "^2.28.2"
fastavro = "^1.7.1"
dash = "^2.8.1"
pandas = "^1.5.3"
dash-bootstrap-components = "^1.3.1"
dash-daq = "^0.5.0"
fastparquet = "^2023.2.0"
[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.1.0"
pylint = "^2.16.2"
mypy = "^1.0.1"
flake8 = "^6.0.0"
ipdb = "^0.13.11"

